src/test/resources/functionly/bad/semantic/bad3.fly
public function bad3(a, b, c)
begin
  x = 0;
  if (a - b) then begin
    x = a;
  end else begin
    x = b;
  end;
  while (x - c) begin
    c = c - someFunction();
  end;
  return otherFunction(c, 5);
end

function someFunction()
begin
    return 10;
end

function otherFunction(a)
begin
    return a - 2;
end
